@@ -1,0 +1,106 @@
+/*
+ * Copyright 2015 by Heiko Schäfer <heiko@rangun.de>
+ *
+ * This file is part of NetMauMau.
+ *
+ * NetMauMau is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 3 of
+ * the License, or (at your option) any later version.
+ *
+ * NetMauMau is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with NetMauMau.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#if defined(HAVE_CONFIG_H) || defined(IN_IDE_PARSER)
+#include "config.h"
+#endif
+
+#include <ctime>
+
+#include "easyplayer.h"
+
+#include "random_gen.h"
+#include "cardtools.h"
+
+using namespace NetMauMau::Player;
+
+EasyPlayer::EasyPlayer(const std::string &name) : HardPlayer(name) {}
+
+EasyPlayer::~EasyPlayer() {}
+
+NetMauMau::Common::ICardPtr
+EasyPlayer::requestCard(const NetMauMau::Common::ICardPtr &uncoveredCard,
+						const NetMauMau::Common::ICard::SUIT *jackSuit,
+						std::size_t takeCount) const {
+
+	NetMauMau::Common::ICardPtr rrc;
+
+	if(!takeCount) {
+
+		IPlayer::CARDS c(getPossibleCards(uncoveredCard, jackSuit));
+
+		if(!c.empty() && !getAceRoundChoice()) {
+
+			std::random_shuffle(c.begin(), c.end(),
+								NetMauMau::Common::genRandom<CARDS::difference_type>);
+
+			rrc = NetMauMau::Common::findCard(*c.begin(), getPlayerCards().begin(),
+											  getPlayerCards().end());
+		}
+
+	} else {
+		rrc = NetMauMau::Common::ICardPtr
+			  (const_cast<const NetMauMau::Common::ICard *>(NetMauMau::Common::getIllegalCard()));
+	}
+
+#if defined(TRACE_AI) && !defined(NDEBUG)
+
+	const bool ansi = isatty(fileno(stderr));
+
+	if(!getenv("NMM_NO_TRACE")) logDebug("-> trace of AI \"" << getName() << "\" -> "
+											 << (rrc ? rrc->description(ansi) : "NO CARD")
+											 << " <-");
+
+#endif
+
+	return rrc;
+}
+
+NetMauMau::Common::ICard::SUIT
+EasyPlayer::getJackChoice(const NetMauMau::Common::ICardPtr &,
+						  const NetMauMau::Common::ICardPtr &) const {
+
+	const NetMauMau::Player::IPlayer::CARDS::difference_type r =
+		NetMauMau::Common::genRandom<NetMauMau::Player::IPlayer::CARDS::difference_type>
+		(static_cast<NetMauMau::Player::IPlayer::CARDS::difference_type>(4u));
+
+	const NetMauMau::Common::ICard::SUIT rs =
+		NetMauMau::Common::symbolToSuit(NetMauMau::Common::getSuitSymbols()[r]);
+
+#if defined(TRACE_AI) && !defined(NDEBUG)
+
+	const bool ansi = isatty(fileno(stderr));
+
+	if(!getenv("NMM_NO_TRACE")) logDebug("-> -jack- trace of AI \"" << getName() << "\" -> "
+											 << Common::suitToSymbol(rs, ansi, ansi) << " <-");
+
+#endif
+
+	return rs;
+}
+
+bool EasyPlayer::getAceRoundChoice() const {
+	return (std::time(0L) + 1) & 1;
+}
+
+IPlayer::TYPE EasyPlayer::getType() const {
+	return EASY;
+}
+
+// kate: indent-mode cstyle; indent-width 4; replace-tabs off; tab-width 4; 
