@@ -1,9 +1,10 @@
 netmaumau (0.17.3) UNRELEASED; urgency=low
 
-  * improved AI
+  * improved hard AI
+  * added easy (entirely random playing) AI
   * many bugfixes
 
- -- Heiko Schäfer <heiko@rangun.de>  Fri, 01 May 2015 07:14:26 +0200
+ -- Heiko Schäfer <heiko@rangun.de>  Sat, 02 May 2015 11:35:41 +0200
 
 netmaumau (0.17.1) UNRELEASED; urgency=low
 
